added static icons for card w/o snack icons

--- a/App.xaml
+++ b/App.xaml
@@ -22,6 +22,10 @@
                 <view:BaseView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewModel:CardViewModel}">
+                <view:CardView/>
+            </DataTemplate>
+
             <BitmapImage x:Key="MainBackground" UriSource="pack://application:,,,/QEAMApp;component/Images/bg.png"/>
 
             <FontFamily x:Key="JetBrainsMono">pack://application:,,,/QEAMApp;component/Fonts/#JetBrains Mono</FontFamily>
