--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,62 +1,56 @@
-﻿<Window x:Class="QEAMApp.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QEAMApp"
-        xmlns:viewModel="clr-namespace:QEAMApp.MVVM.ViewModel"
-        mc:Ignorable="d"
-        Height="800" Width="1279"
-        WindowStyle="None"
-        Background="Transparent"
-        PreviewKeyDown="FocusTextBoxOnKeyDown"
-        AllowsTransparency="True">
+﻿<Window
+    x:Class="QEAMApp.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:QEAMApp"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view="clr-namespace:QEAMApp.MVVM.View"
+    xmlns:viewModel="clr-namespace:QEAMApp.MVVM.ViewModel"
+    Width="1066"
+    Height="668"
+    Background="White"
+    ResizeMode="NoResize"
+    WindowStyle="None"
+    mc:Ignorable="d">
+    <Grid MouseLeftButtonDown="Grid_MouseLeftButtonDown">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="118" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.Resources>
+            <DataTemplate DataType="{x:Type viewModel:IdleScreenViewModel}">
+                <view:IdleScreenView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:UserFoundScreenViewModel}">
+                <view:UserFoundScreenView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:ProfileScreenViewModel}">
+                <view:ProfileScreenView />
+            </DataTemplate>
+        </Grid.Resources>
 
-    <Window.DataContext>
-        <viewModel:MainViewModel/>
-    </Window.DataContext>
-
-    <Border Margin="1,10,-1,10"
-            Background="Black">
-
-        <Grid MouseLeftButtonDown="Grid_MouseLeftButtonDown">
-            <Grid>
-                <Grid.Background>
-                    <ImageBrush/>
-                </Grid.Background>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="122"/>
-                    <RowDefinition/>
-                    <RowDefinition Height="71"/>
-                </Grid.RowDefinitions>
-
-                <Border Grid.Row="0" Margin="-3,0,0,0">
-                    <Border.Background>
-                        <ImageBrush ImageSource="/Images/header.png"/>
-                    </Border.Background>
-                </Border>
-
-                <Button Content="X"
-                        Background="DarkGray"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Width="30"
-                        Height="25"
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Click="CloseButton_Click" RenderTransformOrigin="0.4,0.067"/>
-
-                <Border Grid.Row="2">
-                    <Border.Background>
-                        <ImageBrush ImageSource="/Images/footer.png"/>
-                    </Border.Background>
-                </Border>
-                <ContentControl 
-                    x:Name="MainView"
-                    Content="{Binding HomeVM}" 
-                    Grid.Row="1"/>
-            </Grid>
+        <Grid Grid.Row="0">
+            <Grid.Background>
+                <ImageBrush ImageSource="/QEAMApp;component/Images/header.png" />
+            </Grid.Background>
         </Grid>
-    </Border>
+
+        <Button
+            Grid.Row="0"
+            Grid.Column="1"
+            Width="30"
+            Height="25"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Background="DarkGray"
+            Click="CloseButton_Click"
+            Content="X"
+            RenderTransformOrigin="0.4,0.067" />
+
+        <ContentControl
+            x:Name="CurrentView"
+            Grid.Row="1"
+            Content="{Binding CurrentViewModel}" />
+    </Grid>
 </Window>
