--- a/MVVM/View/IdleScreenView.xaml
+++ b/MVVM/View/IdleScreenView.xaml
@@ -25,8 +25,8 @@
                 BorderBrush="#02ABADB3"
                 Cursor="None"
                 Foreground="Black"
+                IsReadOnly="{Binding IsReadOnly}"
                 Opacity="1"
-                PreviewKeyDown="OnKeyDownHandler"
                 Style="{StaticResource ModernTextBox}"
                 Text="{Binding UniqueIdentifier, UpdateSourceTrigger=PropertyChanged}"
                 TextWrapping="Wrap"
