--- a/MVVM/View/IdleScreenView.xaml
+++ b/MVVM/View/IdleScreenView.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="550"
     d:DesignWidth="1066"
+    Loaded="UserControl_Loaded"
     mc:Ignorable="d">
     <Grid Background="White" MouseLeftButtonDown="Grid_MouseLeftButtonDown">
         <Grid.RowDefinitions>
