--- a/ControlCenter.xaml
+++ b/ControlCenter.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:QEAMApp"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view="clr-namespace:QEAMApp.MVVM.View"
+    xmlns:viewModel="clr-namespace:QEAMApp.MVVM.ViewModel"
     Title="ControlCenter"
     Width="212"
     Height="212"
@@ -13,13 +15,12 @@
     ResizeMode="CanMinimize"
     WindowStyle="None"
     mc:Ignorable="d">
-
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="75" />
-            <RowDefinition Height="60" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
+        <Grid.Resources>
+            <DataTemplate DataType="{x:Type viewModel:ControlScreenViewModel}">
+                <view:ControlScreenView />
+            </DataTemplate>
+        </Grid.Resources>
 
         <Button
             Width="30"
@@ -31,116 +32,9 @@
             Content="X"
             RenderTransformOrigin="0.4,0.067" />
 
-        <ComboBox
-            Width="174"
-            Margin="19,43,19,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            SelectedIndex="0">
-            <ComboBox.Resources>
-                <Style TargetType="ComboBoxItem">
-                    <Setter Property="AllowDrop" Value="True" />
-                </Style>
-            </ComboBox.Resources>
-            <ComboBox.ItemsSource>
-                <x:Array Type="{x:Type ComboBoxItem}">
-                    <ComboBoxItem Content="0" IsSelected="True" />
-                    <ComboBoxItem Content="1" />
-                    <ComboBoxItem Content="2" />
-                    <ComboBoxItem Content="3" />
-                    <ComboBoxItem Content="4" />
-                    <ComboBoxItem Content="5" />
-                    <ComboBoxItem Content="6" />
-                    <ComboBoxItem Content="7" />
-                    <ComboBoxItem Content="8" />
-                    <ComboBoxItem Content="9" />
-                    <ComboBoxItem Content="10" />
-                    <ComboBoxItem Content="11" />
-                    <ComboBoxItem Content="12" />
-                    <ComboBoxItem Content="13" />
-                    <ComboBoxItem Content="14" />
-                    <ComboBoxItem Content="15" />
-                    <ComboBoxItem Content="16" />
-                    <ComboBoxItem Content="17" />
-                    <ComboBoxItem Content="18" />
-                </x:Array>
-            </ComboBox.ItemsSource>
-        </ComboBox>
-
-        <TextBlock
-            Width="112"
-            Margin="34,22,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            FontFamily="Consolas"
-            FontSize="14"
-            Text="setLogState"
-            TextWrapping="Wrap" />
-        <TextBlock
+        <ContentControl
+            x:Name="CurrentView"
             Grid.Row="1"
-            Width="112"
-            Margin="34,10,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            FontFamily="Consolas"
-            FontSize="14"
-            RenderTransformOrigin="0.518,-1.104"
-            Text="IP Address"
-            TextWrapping="Wrap" />
-        <Border
-            Grid.Row="1"
-            Height="22"
-            Margin="19,28,19,10"
-            Background="#FFE9E9E9"
-            BorderBrush="#FFACACAC"
-            BorderThickness="1">
-            <TextBlock
-                x:Name="IPAddress"
-                Width="165"
-                Height="14"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                FontFamily="Consolas"
-                Text="Initializing.."
-                TextWrapping="Wrap" />
-        </Border>
-
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="106" />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Ellipse
-                x:Name="StatusIndicator"
-                Grid.Column="0"
-                Width="20"
-                Height="20"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Fill="#FFE9E9E9" />
-            <TextBlock
-                Width="70"
-                Margin="0,53,0,0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Top"
-                FontFamily="Consolas"
-                RenderTransformOrigin="0.518,-1.104"
-                Text="Status"
-                TextAlignment="Center"
-                TextWrapping="Wrap" />
-            <Button
-                Grid.Column="1"
-                Width="86"
-                Height="30"
-                Margin="0,29,0,0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Top"
-                Background="#FFE9E9E9"
-                BorderBrush="#FFACACAC"
-                Content="Submit"
-                FontFamily="Consolas"
-                FontSize="13" />
-
-        </Grid>
+            Content="{Binding CurrentViewModel}" />
     </Grid>
 </Window>
