--- a/MVVM/View/ProfileScreenView.xaml
+++ b/MVVM/View/ProfileScreenView.xaml
@@ -168,24 +168,236 @@
                 x:Name="MonitoringTable"
                 Margin="20,30,20,10"
                 Background="#665B5B5B"
-                CornerRadius="40" />
+                CornerRadius="40">
+                <Border BorderBrush="Black" BorderThickness="1" />
+            </Border>
+
+            <TextBlock
+                Margin="136,57,136,417"
+                FontFamily="Poppins"
+                FontSize="38"
+                Text="Attendance &amp; Snacks"
+                TextAlignment="Center" />
 
             <Button
-                Width="50"
                 Height="50"
-                Margin="582,41,34,429"
-                Background="#AFAFAF"
+                Margin="578,41,34,429"
                 BorderBrush="Transparent"
                 Command="{Binding GoBackCommand}">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Grid>
-                            <Ellipse Fill="{TemplateBinding Background}" />
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Grid>
-                    </ControlTemplate>
-                </Button.Template>
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/go_back_button.png" />
+                </Button.Background>
             </Button>
+
+            <Border Margin="50,119,50,32">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/Table.png" />
+                </Border.Background>
+            </Border>
+
+            <RadioButton
+                x:Name="AMD1"
+                Width="60"
+                Height="60"
+                Margin="238,166,368,294"
+                BorderBrush="#00707070"
+                GroupName="101"
+                IsChecked="False"
+                Style="{StaticResource {x:Type ToggleButton}}">
+                <RadioButton.Background>
+                    <ImageBrush ImageSource="/Images/check_icon.png" />
+                </RadioButton.Background>
+            </RadioButton>
+
+            <RadioButton
+                x:Name="LD1"
+                Width="60"
+                Height="60"
+                Margin="238,232,368,228"
+                BorderBrush="#00707070"
+                GroupName="100"
+                IsChecked="False"
+                Style="{StaticResource {x:Type ToggleButton}}">
+                <RadioButton.Background>
+                    <ImageBrush ImageSource="/Images/check_icon.png" />
+                </RadioButton.Background>
+            </RadioButton>
+
+            <RadioButton
+                x:Name="PMD1"
+                Width="60"
+                Height="60"
+                Margin="238,296,368,164"
+                BorderBrush="#00707070"
+                GroupName="1"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+
+            <RadioButton
+                x:Name="CheckInD1"
+                Width="60"
+                Height="60"
+                Margin="238,361,368,99"
+                BorderBrush="#00707070"
+                GroupName="2"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+
+            <RadioButton
+                x:Name="CheckOutD1"
+                Width="60"
+                Height="60"
+                Margin="238,426,368,34"
+                BorderBrush="#00707070"
+                GroupName="3"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+
+
+
+            <Border
+                Width="55"
+                Height="55"
+                Margin="81,165,502,292">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/am_snack_icon.png" />
+                </Border.Background>
+            </Border>
+            <Border
+                Width="55"
+                Height="55"
+                Margin="95,234,516,231">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/lunch_snack_icon.png" />
+                </Border.Background>
+            </Border>
+            <Border
+                Width="55"
+                Height="55"
+                Margin="95,298,516,166">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/pm_snack_icon.png" />
+                </Border.Background>
+            </Border>
+            <Border
+                Width="55"
+                Height="55"
+                Margin="95,364,516,101">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/check-in_icon.png" />
+                </Border.Background>
+            </Border>
+            <Border
+                Width="55"
+                Height="55"
+                Margin="87,428,524,37">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/check-out_icon.png" />
+                </Border.Background>
+            </Border>
+            <RadioButton
+                x:Name="AMD2"
+                Width="60"
+                Height="60"
+                Margin="378,166,228,294"
+                BorderBrush="#00707070"
+                GroupName="4"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="LD2"
+                Width="60"
+                Height="60"
+                Margin="378,232,228,228"
+                BorderBrush="#00707070"
+                GroupName="5"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="PMD2"
+                Width="60"
+                Height="60"
+                Margin="378,296,228,164"
+                BorderBrush="#00707070"
+                GroupName="6"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="AMD3"
+                Width="60"
+                Height="60"
+                Margin="518,166,88,294"
+                BorderBrush="#00707070"
+                GroupName="9"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="LD3"
+                Width="60"
+                Height="60"
+                Margin="518,232,88,228"
+                BorderBrush="#00707070"
+                GroupName="10"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="PMD3"
+                Width="60"
+                Height="60"
+                Margin="518,296,88,164"
+                BorderBrush="#00707070"
+                GroupName="11"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="CheckInD2"
+                Width="60"
+                Height="60"
+                Margin="378,361,228,99"
+                BorderBrush="#00707070"
+                GroupName="7"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="CheckInD3"
+                Width="60"
+                Height="60"
+                Margin="518,361,88,99"
+                BorderBrush="#00707070"
+                GroupName="12"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="CheckOutD2"
+                Width="60"
+                Height="60"
+                Margin="378,426,228,34"
+                BorderBrush="#00707070"
+                GroupName="8"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
+            <RadioButton
+                x:Name="CheckOutD3"
+                Width="60"
+                Height="60"
+                Margin="518,426,88,34"
+                BorderBrush="#00707070"
+                GroupName="13"
+                IsChecked="True"
+                Opacity="1"
+                Style="{StaticResource {x:Type ToggleButton}}" />
 
         </Grid>
     </Grid>
